<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/textView"
        android:textColor="@color/letras"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />


    <EditText
        android:id="@+id/text1"
        android:layout_width="394dp"
        android:layout_height="88dp"
        android:layout_margin="10dp"
        android:autofillHints="name"
        android:background="#E3F7FF"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/text1"
        android:inputType="text"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/textView2"
        android:textColor="@color/letras"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1"
        app:layout_constraintVertical_bias="0.075" />

    <EditText
        android:id="@+id/text2"
        android:layout_width="390dp"
        android:layout_height="96dp"
        android:layout_margin="10dp"
        android:layout_marginTop="116dp"
        android:autofillHints="name"
        android:background="#E3F7FF"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/text2"
        android:inputType="text"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonCompare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@color/fondoText"
        android:backgroundTint="@color/black"
        android:inputType="none"
        android:text="@string/buttonCompare"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/textRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/fondoText"
        android:textColor="@color/letras"
        android:textSize="34sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCompare"
        app:layout_constraintVertical_bias="0.325" />


</androidx.constraintlayout.widget.ConstraintLayout>